; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/gap/extr_btc_gap_bt.c_btc_gap_bt_busy_level_updated.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/profile/std/gap/extr_btc_gap_bt.c_btc_gap_bt_busy_level_updated.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32 }

@BTM_BL_INQUIRY_STARTED = common dso_local global i64 0, align 8
@ESP_BT_GAP_DISCOVERY_STARTED = common dso_local global i32 0, align 4
@ESP_BT_GAP_DISC_STATE_CHANGED_EVT = common dso_local global i32 0, align 4
@btc_gap_bt_inquiry_in_progress = common dso_local global i32 0, align 4
@BTM_BL_INQUIRY_CANCELLED = common dso_local global i64 0, align 8
@BTM_BL_INQUIRY_COMPLETE = common dso_local global i64 0, align 8
@ESP_BT_GAP_DISCOVERY_STOPPED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @btc_gap_bt_busy_level_updated(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca %struct.TYPE_5__, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = load i64, i64* @BTM_BL_INQUIRY_STARTED, align 8
  %6 = icmp eq i64 %4, %5
  br i1 %6, label %7, label %13

7:                                                ; preds = %1
  %8 = load i32, i32* @ESP_BT_GAP_DISCOVERY_STARTED, align 4
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %10 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  %11 = load i32, i32* @ESP_BT_GAP_DISC_STATE_CHANGED_EVT, align 4
  %12 = call i32 @btc_gap_bt_cb_to_app(i32 %11, %struct.TYPE_5__* %3)
  store i32 1, i32* @btc_gap_bt_inquiry_in_progress, align 4
  br label %28

13:                                               ; preds = %1
  %14 = load i64, i64* %2, align 8
  %15 = load i64, i64* @BTM_BL_INQUIRY_CANCELLED, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %21, label %17

17:                                               ; preds = %13
  %18 = load i64, i64* %2, align 8
  %19 = load i64, i64* @BTM_BL_INQUIRY_COMPLETE, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %17, %13
  %22 = load i32, i32* @ESP_BT_GAP_DISCOVERY_STOPPED, align 4
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %3, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %23, i32 0, i32 0
  store i32 %22, i32* %24, align 4
  %25 = load i32, i32* @ESP_BT_GAP_DISC_STATE_CHANGED_EVT, align 4
  %26 = call i32 @btc_gap_bt_cb_to_app(i32 %25, %struct.TYPE_5__* %3)
  store i32 0, i32* @btc_gap_bt_inquiry_in_progress, align 4
  br label %27

27:                                               ; preds = %21, %17
  br label %28

28:                                               ; preds = %27, %7
  ret void
}

declare dso_local i32 @btc_gap_bt_cb_to_app(i32, %struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
